--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="fixed_camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="collision_detector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="fixed_camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="collision_detector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
